[FIX] hr_holidays: fix time off summary card display
On a time off request, there is a summary on the side.
Problem: if we have time off in hours, the display is not adapted and the text is too long.

This commit fixes the issue to display the hours correctly.

task-5092855

--- a/addons/hr_holidays/static/src/scss/time_off.scss
+++ b/addons/hr_holidays/static/src/scss/time_off.scss
@@ -118,7 +118,7 @@
             }
         }
         @media only screen and (min-width:768px){
-            .o_kanban_record {
+            .o_kanban_record:not(.o_kanban_ghost) {
                 width: 100%;
                 min-height: 6.5rem;
                 margin: 0px;
